add songs routes params on swagger
